--- a/src/styles/slideshow.scss
+++ b/src/styles/slideshow.scss
@@ -26,7 +26,7 @@
     overflow: hidden;
 
     .slide-image {
-      position: absolute; 
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
@@ -44,8 +44,9 @@
       padding: 3rem;
       background: rgba(255, 255, 255, 0.85);
       opacity: 0.9;
-      border-radius: 8px; 
-      max-width: 50%;
+      border-radius: 8px;
+      width: 30vw;
+      max-width: 70%;
       text-align: center;
 
       h2 {
@@ -57,7 +58,7 @@
       p {
         font-size: 1.2rem;
         color: #555;
-        line-height: 1.6; 
+        line-height: 1.6;
         max-width: 600px;
       }
     }
